--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,21 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 canvas {
-    border: 1px solid black;
-    margin: 20px;
+    border: 3px solid black;
+    padding: 5px;
+    margin: 20px 0;
+    border-radius: 10px;
+}
+
+input, select, button {
+    border: 2px solid black;
+    background: 0;
+    border-radius: 5px;
+    height: 40px;
+    width: 13%;
+    font-weight: bolder;
 }
